<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/now_playing_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical"
        android:theme="@style/nowPlayingTheme">

        <TextView
            android:id="@+id/now_playing_song"
            style="@style/nowPlayingSongs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/song_one" />

        <TextView
            android:id="@+id/now_playing_artist"
            style="@style/nowPlayingArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist_one" />

        <TextView
            android:id="@+id/now_playing_album"
            style="@style/nowPlayingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/album_one" />

        <TextView
            android:id="@+id/now_playing_genre"
            style="@style/nowPlayingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre_one" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/shuffle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/shuffle"
            android:src="@drawable/shuffle" />

        <ImageView
            android:id="@+id/previous"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/previous"
            android:src="@drawable/previous" />

        <ImageView
            android:id="@+id/play"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/play"
            android:src="@drawable/play_icon" />

        <ImageView
            android:id="@+id/next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/next"
            android:src="@drawable/next" />

        <ImageView
            android:id="@+id/repeat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/repeat"
            android:src="@drawable/repeat_one" />
    </LinearLayout>

</LinearLayout>