<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/library_text_view"
            style="@style/headerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_library" />

        <TextView
            android:id="@+id/now_playing_text_view"
            style="@style/mainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/now_playing_background"
            android:text="@string/category_now_playing" />

        <TextView
            android:id="@+id/songs_text_view"
            style="@style/mainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/songs_background"
            android:text="@string/category_songs" />

        <TextView
            android:id="@+id/artists_text_view"
            style="@style/mainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/artists_background"
            android:text="@string/category_artists" />

        <TextView
            android:id="@+id/albums_text_view"
            style="@style/mainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/albums_background"
            android:text="@string/category_albums" />

        <TextView
            android:id="@+id/genres_text_view"
            style="@style/mainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/genres_background"
            android:text="@string/category_genres" />
    </LinearLayout>
</ScrollView>